--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,13 @@
-@import url("./src/css/global.css");
-@import url("./src/css/header.css");
-@import url("./src/css/main.css");
-@import url("./src/css/design.css");
-@import url("./src/css/gallery.css");
-@import url("./src/css/contact.css");
-@import url("./src/css/footer.css");
+@import url("./css/global/global.css");
+@import url("./css/global/header.css");
+@import url("./css/global/footer.css");
+@import url("./css/global/title-page.css");
+@import url("./css/home/main-home.css");
+@import url("./css/home/design-home.css");
+@import url("./css/home/gallery-home.css");
+@import url("./css/home/contact-home.css");
+@import url("./css/terms/terms.css");
+@import url("./css/login/login.css");
+@import url("./css/global/forms.css");
+@import url("./css/contact/contact.css");
+@import url("./css/gallery/gallery.css");
