--- a/src/css/global/forms.css
+++ b/src/css/global/forms.css
@@ -55,3 +55,15 @@ form button:hover {
   border: 1px solid #afadad;
   transition: 0.3s ease;
 }
+
+@media (max-width: 800px) {
+  form input {
+    width: 400px;
+  }
+}
+
+@media (max-width: 500px) {
+  form input {
+    width: 250px;
+  }
+}
