--- a/src/css/contact/contact.css
+++ b/src/css/contact/contact.css
@@ -1,15 +1,16 @@
-.contact{
+.contact {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 60px;
-  margin: 120px auto;
+  padding: 120px 20px;
 }
 
 .contact__img img {
   width: 100%;
   box-shadow: -50px -50px #272727;
   border-radius: 4px;
+  object-fit: cover;
 }
 
 .contact__info h2 {
@@ -34,4 +35,56 @@
 
 .contact__info p a:hover {
   color: #575555;
+}
+
+@media (max-width: 1100px) {
+  .contact {
+    justify-items: center;
+    padding: 60px 20px;
+  }
+  .contact__info form input,
+  .contact__info form button,
+  .contact__info form textarea {
+    width: 400px;
+  }
+}
+
+@media (max-width: 800px) {
+  .contact {
+    grid-template-columns: 1fr;
+    justify-items: initial;
+  }
+  .contact__img img {
+    width: 100%;
+    height: 400px;
+  }
+  .contact__info p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .contact__img img {
+    width: 100%;
+    height: 200px;
+  }
+  .contact__info h2 {
+    font-size: 1.5rem;
+  }
+  .contact__info form input,
+  .contact__info form button,
+  .contact__info form textarea {
+    width: 300px;
+  }
+  .contact__info p {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .contact__info form input,
+  .contact__info form button,
+  .contact__info form textarea {
+    width: 250px;
+  }
 }
