--- a/src/css/global/header.css
+++ b/src/css/global/header.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 30px 0;
+  padding: 30px 20px;
   box-sizing: border-box;
 }
 
@@ -78,4 +78,26 @@
 
 .nav__second .heart:hover path {
   stroke: rgb(209, 41, 41);
+}
+
+@media (max-width: 800px) {
+  .header__menu {
+    flex-direction: column;
+    gap: 32px;
+  }
+  .menu__nav {
+    gap: 40px;
+  }
+  .nav__primary {
+    gap: 32px;
+  }
+}
+
+@media (max-width: 500px) {
+  .nav__primary {
+    margin-left: 40px;
+  }
+  .nav__second li {
+    display: none;
+  }
 }
