--- a/src/css/home/design-home.css
+++ b/src/css/home/design-home.css
@@ -5,12 +5,14 @@
   margin-top: 200px;
   align-items: center;
   margin-bottom: 120px;
+  padding: 0 20px;
 }
 
 .section__design img {
   width: 100%;
   border-radius: 4px;
   box-shadow: -50px -50px #272727;
+  object-fit: cover;
 }
 
 .design__content {
@@ -49,4 +51,30 @@
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.6;
+}
+
+@media (max-width: 1100px) {
+  .section__design {
+    margin-top: 100px;
+    gap: 40px;
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 800px) {
+  .design__content a {
+    font-size: 1rem;
+  }
+  .design_info h2 {
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 650px) {
+  .section__design {
+    grid-template-columns: 1fr;
+  }
+  .section__design img {
+    height: 200px;
+  }
 }
