--- a/src/css/home/main-home.css
+++ b/src/css/home/main-home.css
@@ -1,6 +1,7 @@
 .main {
   background: #f9f9f9;
   box-shadow: inset 0px -120px #fff;
+  padding: 0 20px;
   margin-bottom: 120px;
 }
 
@@ -62,4 +63,78 @@
 .main__content img {
   width: 100%;
   border-radius: 0px 0px 4px 4px;
+  object-fit: cover;
+}
+
+@media (max-width: 1100px) {
+  .main {
+    background: #f9f9f9;
+    box-shadow: inset 0px -80px #fff;
+    margin-bottom: 0;
+  }
+  .main__content h1 {
+    font-size: 2rem;
+  }
+  .main__content p {
+    font-size: 1rem;
+    max-width: 35ch;
+  }
+  .main__content a.main__btn {
+    padding: 10px 24px;
+    margin-right: 20px;
+  }
+  .main__content a {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .main {
+    box-shadow: inset 0px -120px #fff;
+    padding: 20px 20px;
+  }
+  .main__content {
+    grid-template-columns: 1fr;
+  }
+  .main__content h1 {
+    font-size: 2.5rem;
+    line-height: 1.2;
+  }
+  .main__content img {
+    height: 400px;
+    border-radius: 4px;
+  }
+  .content__info {
+    margin-bottom: 32px;
+  }
+}
+@media (max-width: 600px) {
+  .main {
+    box-shadow: inset 0px -120px #fff;
+  }
+  .main__content h1 {
+    font-size: 2rem;
+  }
+  .main__content p {
+    font-size: 1rem;
+    max-width: 35ch;
+  }
+  .main__content a.main__btn {
+    padding: 10px 24px;
+    margin-right: 20px;
+  }
+  .main__content a {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 420px) {
+  .content__info {
+    display: flex;
+    flex-direction: column;
+  }
+  .main__btn {
+    max-width: 143px;
+    margin-bottom: 8px;
+  }
 }
