--- a/src/css/login/login.css
+++ b/src/css/login/login.css
@@ -3,13 +3,14 @@
   grid-template-columns: 1fr 1fr;
   align-items: center;
   gap: 60px;
-  margin: 120px auto;
+  padding: 120px 20px;
 }
 
 .login__img img {
   width: 100%;
   box-shadow: -50px -50px #272727;
   border-radius: 4px;
+  object-fit: cover;
 }
 
 .login__info h2 {
@@ -34,4 +35,50 @@
 
 .login__info p a:hover {
   color: #575555;
+}
+
+@media (max-width: 1100px) {
+  .login {
+    justify-items: center;
+    padding: 60px 20px;
+  }
+  .login__info form input,
+  .login__info form button {
+    width: 400px;
+  }
+}
+
+@media (max-width: 800px) {
+  .login {
+    grid-template-columns: 1fr;
+    justify-items: initial;
+  }
+  .login__img img {
+    width: 100%;
+    height: 400px;
+  }
+  .login__info p {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .login__img img {
+    width: 100%;
+    height: 200px;
+  }
+  .login__info form input,
+  .login__info form button {
+    width: 300px;
+  }
+  .login__info p {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .login__info form input,
+  .login__info form button {
+    width: 250px;
+  }
 }
